# email-service

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.sqlx/: query-253ab3fe473262d6a7906d47a2d77b925e7e82457c914a4150e50a9c560c4662.json  query-c58d74be34dd8cf8b6ead4e62de38c438fc24b73ed1cbaf54c97922c75972a0d.json  query-cf51b9f1150e8046051fb862f91c51c7702a0c7310cc13110cc7c966d4038b72.json  query-e35cbb94798c8b07d84d6ce5235c7626226221d56fc36d5d9f42e9c34b03bef8.json
migrations/: 20250108143225_create_emails_table.sql
proto/: email.proto
src/: lib.rs  main.rs
src/db/: mod.rs
src/email_service/: config.rs  mod.rs  model.rs  service.rs  test_utils.rs
src/protocols/: grpc.rs  http.rs  mod.rs  mods.rs  websocket.rs
