[package]
name = "email-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "email_service"
path = "src/lib.rs"

[[bin]]
name = "email-service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.1"
tower-http = { version = "0.5.0", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = "0.11"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tonic = "0.10"
prost = "0.12"
futures = "0.3"
tokio-tungstenite = "0.20"
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.9"

